[package]
name = "weather"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.24"
chrono-systemd-time = "0.1.0"
clap = { version = "4", features = ["derive"] }
directories = "5.0.0"
serde = { version = "1.0.159", features = ["derive"] }
toml = "0.7.3"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde_json = "1.0.95"
